# redesigned-meme

./: .gitignore  CLAUDE.md  README.md  model_graph.onnx
backend/: pyproject.toml  pyrightconfig.json
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: trainer.py
backend/app/dataset/: dataset.py  text_cleaner.py
backend/app/models/: model.py
backend/data/processed/: test.csv  val.csv
backend/scripts/: export_model_graph.py  prepare_data.py  test_cleaner.py  test_dataset.py  train.py
frontend/: index.html  package-lock.json  package.json
frontend/src/: App.vue  style.css
frontend/src/api/: sentiment.ts
