[project]
name = "deepLeran-backend"
version = "0.1.0"
description = "Social Media Sentiment Analysis Backend"
requires-python = ">=3.10"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.34.0",
    "torch>=2.5.0",
    "transformers>=4.48.0",
    "datasets>=3.2.0",
    "accelerate>=1.2.0",
    "scikit-learn>=1.6.0",
    "pandas>=2.2.0",
    "numpy>=2.2.0",
    "tqdm>=4.67.0",
    "rich>=13.9.0",
    "pydantic>=2.10.0",
    "python-multipart>=0.0.20",
    "netron>=8.9.6",
    "onnxscript>=0.6.2",
]

[project.optional-dependencies]
dev = [
    "pyright>=1.1.400",
    "pytest>=8.3.0",
    "pytest-asyncio>=0.25.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["app"]

[tool.pyright]
pythonVersion = "3.10"
typeCheckingMode = "strict"
